--- a/vignettes/Development/Quality control/10.1 Template R vs Excel comparison.Rmd
+++ b/vignettes/Development/Quality control/10.1 Template R vs Excel comparison.Rmd
@@ -17,7 +17,7 @@ projectRoot <- paste(getwd(), "..", "..", sep = "/")
 knitr::opts_knit$set(root.dir = projectRoot) #assuming vignette is in a direct subfolder of the project
 ```
 
-SimpleBox 4.0 produces two sorts of output; a steady-state or "level
+*SimpleBox 4.0 produces two sorts of output; a steady-state or "level
 III" output, and the quasi-dynamic or "level IV" output. The
 steady-state output is developed when the conditions (loadings and
 environmental conditions) remain constant in time for a sufficiently
@@ -35,14 +35,14 @@ the set of mass balance equations from time zero, with all
 concentrations at zero, to infinite time with all concentrations
 constant at steady state. The standard procedure is to compute the
 steady-state solution first and carry out the dynamic response
-computation afterwards, as an option.
+computation afterwards, as an option.*
 
-# Initialize
+# *Initialize*
 
-This vignettes demonstrates the mechanism behind SBoo. The model first
+*This vignettes demonstrates the mechanism behind SBoo. The model first
 needs to be initialized. Before initialisation a substances needs to be
 selected, otherwise the "default stubstance" is used. initWorld.R does
-just that, and calculates SBvars, flows and k's.
+just that, and calculates SBvars, flows and k's.*
 
 ```{r warning=FALSE}
 #We need to initialize, by default a molecular substance is selected
@@ -121,7 +121,7 @@ SBexcel.K <- pivot_longer(SBexcel.K, cols =  as.character(SBexcel.Names), values
 length(SBexcel.K$k)
 
 #adding "from" and "to" acronyms to the R K matrix
-kaas <- tibble(World$kaas)
+kaas <- as_tibble(World$kaas)
 unique(kaas$fromScale)
 unique(kaas$fromSubCompart)
 
@@ -147,17 +147,27 @@ accronym_map2 <- c("Arctic" = "A",
 
 # kaas |> filter(fromScale == "Tropic" & process == "k_Degradation") |> print(n=50)
 
-kaas$from <- paste0(accronym_map[kaas$fromSubCompart], accronym_map2[kaas$fromScale])
-kaas$to <- paste0(accronym_map[kaas$toSubCompart], accronym_map2[kaas$toScale])
+kaas <- kaas |> mutate(from =  paste0(accronym_map[fromSubCompart], 
+                            accronym_map2[fromScale]),
+               to = paste0(accronym_map[toSubCompart], 
+                           accronym_map2[toScale]))
+
+# kaas$from <- paste0(accronym_map[kaas$fromSubCompart], accronym_map2[kaas$fromScale])
+
+# kaas$to <- paste0(accronym_map[kaas$toSubCompart], accronym_map2[kaas$toScale])
 
 # Issue that compartments sediment and soil at global scale in excel have sd and s as acronyms instead of sd2 and s1
-kaas <- kaas |> mutate(from = ifelse((fromScale == "Tropic" | fromScale == "Arctic" | fromScale == "Moderate") & 
-  (fromSubCompart == "marinesediment" | fromSubCompart == "naturalsoil"), str_replace_all(from, c("sd2"="sd","s1"="s")), from))
+kaas <- 
+  kaas |> 
+  mutate(from = 
+                   ifelse((fromScale == "Tropic" | fromScale == "Arctic" | fromScale == "Moderate") & 
+                            (fromSubCompart == "marinesediment" | fromSubCompart == "naturalsoil"), 
+                          str_replace_all(from, c("sd2"="sd","s1"="s")), 
+                          from)) |> 
+  mutate(to = ifelse((toScale == "Tropic" | toScale == "Arctic" | toScale == "Moderate") & 
+                       (toSubCompart == "marinesediment" | toSubCompart == "naturalsoil"), str_replace_all(to, c("sd2"="sd","s1"="s")), to))
 
-kaas <- kaas |> mutate(to = ifelse((toScale == "Tropic" | toScale == "Arctic" | toScale == "Moderate") & 
-  (toSubCompart == "marinesediment" | toSubCompart == "naturalsoil"), str_replace_all(from, c("sd2"="sd","s1"="s")), to))
-
-
+  
 
 diagonal_excel <- SBexcel.K[SBexcel.K$from == SBexcel.K$to,] #all the diagonals in excel are negative values -> sums of all the "froms" of that compartment
 
@@ -185,24 +195,24 @@ ggplot(merged_diagonal, aes(x = from, y = diff)) +
 
 ```
 
-Why are these compartments in SB-R instance: \>
-diagonal$from[!diagonal$from %in% diagonal_excel\$from] [1] "s2A" "s2M"
-"s2T" "s3A" "s3M" "s3T" "sd0A" "sd0C" "sd0M" "sd0R" "sd0T" "sd1A" "sd1M"
-"sd1T" "w0A" "w0M" "w0T" "w1A" "w1M" "w1T" [21] "w3C" "w3R"
+*Why are these compartments in SB-R instance: \>
+diagonal*$from[!diagonal$*from %in% diagonal_excel\$from] [1] "s2A"
+"s2M" "s2T" "s3A" "s3M" "s3T" "sd0A" "sd0C" "sd0M" "sd0R" "sd0T" "sd1A"
+"sd1M" "sd1T" "w0A" "w0M" "w0T" "w1A" "w1M" "w1T" [21] "w3C" "w3R"*
 
-This is due to the degradation rate constant being calculated for all
+*This is due to the degradation rate constant being calculated for all
 combinations of subcompartments. There is currently no data sheet where
 the exclusion based on combination of subcompartment and scale can be
 set. So these types of exclusions are needed in the process function
-itself.
+itself.*
 
-So now the compartments are the correct amount based on fixing
-exclusions in k_Degradation.
+*So now the compartments are the correct amount based on fixing
+exclusions in k_Degradation.*
 
 ```{r rate_constants}
 #Dataframe of all other boxes
 
-kaas |> filter(to != from)
+# kaas |> filter(to != from)
 
 
 kaas2 <- kaas |>  
@@ -241,20 +251,22 @@ ggplot(mergedkaas, aes(x = to, y = from, color = abs(diff))) +
 
 ```
 
-Some testing needed to see why K's from air are so different from those
-in Excel.
+## *air*
 
-1.  The Fringas in excel had an error, was using variables from Moderate
-    scale, fix in Excel.
+*Some testing needed to see why K's from air are so different from those
+in Excel.*
 
-2.  k_Escape was being converted to seconds twice! Units conversion is
+1.  *The Fringas in excel had an error, was using variables from
+    Moderate scale, fix in Excel.*
+
+2.  *k_Escape was being converted to seconds twice! Units conversion is
     enough, no need to cope with such conversions in process algorithms.
-    All calculation data should be in SI units.
+    All calculation data should be in SI units.*
 
-3.  k_Adsorption was using Area which should have been to.Area
+3.  *k_Adsorption was using Area which should have been to.Area*
 
-Checked: k_Degradation, k_Escape, k_Advection, Deposition and
-adsorption.
+*Checked: k_Degradation, k_Escape, k_Advection, Deposition and
+adsorption.*
 
 ```{r testing_aA, eval=FALSE, include=FALSE}
 
@@ -280,11 +292,17 @@ World$fetchData("FRACsea")
 
 ```
 
-Issue w0R was linked to Excel error using sea water instead of
-freshwater to sea water flow to calculate w0 to w1 water flow.
+## *water*
+
+*Issue w0R was linked to Excel error using sea water instead of
+freshwater to sea water flow to calculate w0 to w1 water flow.*
 
 ```{r test_w1R}
-kaas |> filter(from == "sd1R")
+kaas |> filter(from == "w3M")
+
+as_tibble(World$kaas) |> filter(fromSubCompart == "deepocean")
+
+kaas |> filter(fromSubCompart == "deepocean")
 World$moduleList[["k_Degradation"]]$execute(debugAt = list(ScaleName="Arctic",SubCompartName = "air"))
 
 World$fetchData("SubCompartName")
