--- a/vignettes/Development/Quality control/10.2 Template R vs Excel comparison particulates.Rmd
+++ b/vignettes/Development/Quality control/10.2 Template R vs Excel comparison particulates.Rmd
@@ -54,6 +54,7 @@ Potential_substances <- c("1-aminoanthraquinone", # no class
                           "nAg_10nm", # nanoparticle (class particle) #not is substancelist?
                           "microplastic") # microplastic (class particle)
 substance <- Potential_substances[6]
+#create the relevant world for the substance selected
 source("baseScripts/initWorld_onlyParticulate.R")
 #source("baseScripts/initworld_onlyMolec.R")
 
@@ -73,7 +74,6 @@ ProcessNanoFunctions <- c("k_Advection", "k_Burial",
 #                          "k_Volatilisation")
 
 
-# ProcessNanoFunctions[!ProcessNanoFunctions %in% unique(World$kaas$process)]
 ProcessNanoFunctions[!ProcessNanoFunctions %in% unique(World$kaas$process)]
 
 unique(World$kaas$process)
