--- a/vignettes/Development/Quality control/10.2 Template R vs Excel comparison particulates.Rmd
+++ b/vignettes/Development/Quality control/10.2 Template R vs Excel comparison particulates.Rmd
@@ -51,7 +51,7 @@ Potential_substances <- c("1-aminoanthraquinone", # no class
                           "1-Hexadecanamine, N,N-dimethyl-", # base
                           "1-Chloro-2-nitro-propane", # neutral
                           "Sb(III)", # metal
-                          "nAg_10nm", # nanoparticle (class particle) #not is substancelist?
+                          "nAg_10nm", # nanoparticle (class particle) #not in substancelist?
                           "microplastic") # microplastic (class particle)
 substance <- Potential_substances[6]
 #create the relevant world for the substance selected
@@ -67,32 +67,12 @@ ProcessNanoFunctions <- c("k_Advection", "k_Burial",
                          "k_Leaching", "k_Resuspension", "k_Runoff", "k_Sedimentation",
                         "k_WetDeposition")
 
-# ProcessMolFunctions <- c("k_Adsorption", "k_Advection", "k_Burial",
-#                           "k_Degradation", "k_Deposition", "k_Desorption",
-#                           "k_Erosion", "k_Escape", 
-#                          "k_Leaching", "k_Resuspension", "k_Runoff", "k_Sedimentation", 
-#                          "k_Volatilisation")
+
 
 
 ProcessNanoFunctions[!ProcessNanoFunctions %in% unique(World$kaas$process)]
 
 unique(World$kaas$process)
-# World$kaas
-# World$moduleList[["k_Deposition"]]
-# World$moduleList[["k_Deposition"]]$execute(debugAt = list())
-
-
-
-# World$moduleList[["k_DryDeposition"]]$execute(debugAt = list())
-# 
-# World$fetchData("rad_species")
-# World$fetchData("SettlingVelocity")
-# 
-# World$NewCalcVariable("SettlingVelocity")
-# World$CalcVar("SettlingVelocity")
-# 
-# World$moduleList[["SettlingVelocity"]]$execute(debugAt = list())
-# World$moduleList[["SettlingVelocity"]]$execute()
 
 ```
 
@@ -101,7 +81,7 @@ unique(World$kaas$process)
 library(openxlsx)
 library(tidyverse)
 #read in K matrix from excel
-SBExcelName <- paste0("vignettes/Development/Quality control/SBExcel/SimpleBox4.01_20230824_",substance,".xlsm") #molecular version for now
+SBExcelName <- paste0("vignettes/Development/Quality control/SBExcel/SimpleBox4nano_rev16022024_",substance,".xlsx") #molecular version for now
 
 SBexcel.K <- read.xlsx(SBExcelName,
                   colNames = FALSE,
@@ -137,7 +117,8 @@ accronym_map <- c("marinesediment" = "sd2",
                 "deepocean" = "w3",
                 "sea" = "w2",
                 "river" = "w1",
-                "lake" = "w0")
+                "lake" = "w0", 
+                "cloudwater" = "cw")
 
 accronym_map2 <- c("Arctic" = "A",
                    "Moderate" = "M",
@@ -145,42 +126,68 @@ accronym_map2 <- c("Arctic" = "A",
                    "Continental" = "C",
                    "Regional" = "R")
 
+accronym_map3 <- c("Dissolved" = "D", 
+                   "Gas" = "G", 
+                   "Large" = "P", 
+                   "Small" = "A",
+                   "Solid" = "S", 
+                   "Unbound" = "U")
+
 # kaas |> filter(fromScale == "Tropic" & process == "k_Degradation") |> print(n=50)
 
 kaas <- kaas |> mutate(from =  paste0(accronym_map[fromSubCompart], 
-                            accronym_map2[fromScale]),
+                            accronym_map2[fromScale], 
+                            accronym_map3[fromSpecies]),
                to = paste0(accronym_map[toSubCompart], 
-                           accronym_map2[toScale]))
+                           accronym_map2[toScale], 
+                           accronym_map3[toSpecies]))
 
 # kaas$from <- paste0(accronym_map[kaas$fromSubCompart], accronym_map2[kaas$fromScale])
 
 # kaas$to <- paste0(accronym_map[kaas$toSubCompart], accronym_map2[kaas$toScale])
 
-# Issue that compartments sediment and soil at global scale in excel have sd and s as acronyms instead of sd2 and s1
-kaas <- 
-  kaas |> 
-  mutate(from = 
-                   ifelse((fromScale == "Tropic" | fromScale == "Arctic" | fromScale == "Moderate") & 
-                            (fromSubCompart == "marinesediment" | fromSubCompart == "naturalsoil"), 
-                          str_replace_all(from, c("sd2"="sd","s1"="s")), 
-                          from)) |> 
-  mutate(to = ifelse((toScale == "Tropic" | toScale == "Arctic" | toScale == "Moderate") & 
+# Issue that compartments sediment and soil at global scale in excel have sd and s as acronyms instead of sd2 and s1 , happens in this case as well
+
+#"sd2"="sd","s1"="s", "s2 =s", "s3 = s", "sd0 = sd", "sd1 = sd1")
+#("sd2"="sd","s1"="s")
+kaas <-
+  kaas |>
+  mutate(from =
+                   ifelse((fromScale == "Tropic" | fromScale == "Arctic" | fromScale == "Moderate") &
+                            (fromSubCompart == "marinesediment" | fromSubCompart == "naturalsoil"),
+                          str_replace_all(from, c("sd2"="sd","s1"="s")),
+                          from)) |>
+  mutate(to = ifelse((toScale == "Tropic" | toScale == "Arctic" | toScale == "Moderate") &
                        (toSubCompart == "marinesediment" | toSubCompart == "naturalsoil"), str_replace_all(to, c("sd2"="sd","s1"="s")), to))
 
   
 
 diagonal_excel <- SBexcel.K[SBexcel.K$from == SBexcel.K$to,] #all the diagonals in excel are negative values -> sums of all the "froms" of that compartment
 
-diagonal_R <- 
-  aggregate(k ~ from, data = kaas, FUN = sum) #R model has k values per process, not per box. For the "diagonal" ("from = to") boxes, this is different than in the excel version. summing all the "froms" here to be able to compare them with excel matrix. This should result in one value for each compartment (scale-subcomp-species combo)
+#filter out dissolved and gas processes
+
+filtered_excel <- diagonal_excel[!endsWith(diagonal_excel$from, "D"), ]
+filtered_excel <- filtered_excel[!endsWith(filtered_excel$from, "G"), ]
+
+#diagonal_excel <- filtered_excel
+
+#filter out molecular (unbound) state
+
+diagonal_R <-aggregate(k ~ from, data = kaas, FUN = sum) 
+print(diagonal_R$from)
+filtered_R <- diagonal_R[!endsWith(diagonal_R$from, "U"), ]
+#diagonal_R <- filtered_R
+      
+                           #R model has k values per process, not per box. For the "diagonal" ("from = to") boxes, this is different than in the excel version. summing all the "froms" here to be able to compare them with excel matrix. This should result in one value for each compartment (scale-subcomp-species combo)
 
 ```
 
 ```{r diagonal}
 #Check for any differences in what compartments there are between versions
-diagonal_R$from[!diagonal_R$from %in% diagonal_excel$from] # "sd0C" "sd0R" were added in sboo v1
-diagonal_excel$from[!diagonal_excel$from %in% diagonal_R$from] #all excel diagonals are in those of R
-
+# diagonal_R$from[!diagonal_R$from %in% diagonal_excel$from] # "sd0C" "sd0R" were added in sboo v1
+filtered_R$from[!filtered_R$from %in% filtered_excel$from]
+# diagonal_excel$from[!diagonal_excel$from %in% diagonal_R$from] #all excel diagonals are in those of R
+filtered_excel$from[!filtered_excel$from %in% filtered_R$from]
 ifelse( (length(diagonal_R$k)-2)==length(diagonal_excel$k) ,
        print("ok"), stop("too many compartment combo's")) 
 
