--- a/vignettes/Development/Quality control/10.2 Template R vs Excel comparison particulates.Rmd
+++ b/vignettes/Development/Quality control/10.2 Template R vs Excel comparison particulates.Rmd
@@ -192,6 +192,8 @@ filtered_R <- diagonal_R[!endsWith(diagonal_R$from, "U"), ]
 ```{r diagonal}
 #Check for any differences in what compartments there are between versions
 # diagonal_R$from[!diagonal_R$from %in% diagonal_excel$from] # "sd0C" "sd0R" were added in sboo v1
+library (ggplot2)
+library(plotly)
 filtered_R$from[!filtered_R$from %in% filtered_excel$from]
 # diagonal_excel$from[!diagonal_excel$from %in% diagonal_R$from] #all excel diagonals are in those of R
 filtered_excel$from[!filtered_excel$from %in% filtered_R$from]
@@ -204,8 +206,19 @@ merged_diagonal$k_Excel <- -merged_diagonal$k_Excel #Turning the "negative" valu
 merged_diagonal$diff <- merged_diagonal$k_R - merged_diagonal$k_Excel 
 
 #Plot of differences of the diagonals per compartment
-ggplot(merged_diagonal, aes(x = from, y = diff)) +
+plot <- ggplot(merged_diagonal, aes(x = from, y = diff)) +
   geom_boxplot()
+
+# Convert ggplot to plotly
+plotly_plot <- ggplotly(plot)
+
+# Save as HTML
+htmlwidgets::saveWidget(plotly_plot, file = "differences_diagonals_particulate.html")
+
+# Open in default web browser
+browseURL("differences_diagonals_particulate.html")
+
+
 
 sorted_diff <- merged_diagonal[order(abs(merged_diagonal$diff), decreasing = TRUE), ]
 print(sorted_diff$from)
@@ -295,20 +308,6 @@ ggplot(mergedkaas, aes(x = to, y = from, color = abs(relDif))) +
 
 ## *air*
 
-*Some testing needed to see why K's from air are so different from those
-in Excel.*
-
-1.  *The Fringas in excel had an error, was using variables from
-    Moderate scale, fix in Excel.*
-
-2.  *k_Escape was being converted to seconds twice! Units conversion is
-    enough, no need to cope with such conversions in process algorithms.
-    All calculation data should be in SI units.*
-
-3.  *k_Adsorption was using Area which should have been to.Area*
-
-*Checked: k_Degradation, k_Escape, k_Advection, Deposition and
-adsorption.*
 
 ```{r testing_aA, eval=FALSE, include=FALSE}
 
